# competitions

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md
scriptnet/: db.sqlite3  manage.py
scriptnet/competitions/: admin.py  apps.py  context_processors.py  evaluators.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
scriptnet/competitions/executables/EvaluationCERandWER/pageLineExtractor/: CMakeLists.txt  Makefile  README  algorithm_kmeans.hpp  grey_level_histogram.hpp  image.cc  line_region_list.cc  line_region_list.hpp  pageLineExtractor.kdev4  page_file.cc  page_file.hpp
scriptnet/competitions/executables/EvaluationCERandWER/pageLineExtractor/.kdev4/: pageLineExtractor.kdev4
scriptnet/competitions/migrations/: 0001_initial.py  0002_submission.py  0003_auto_20160607_1532.py  0004_submission_publishable.py  0005_benchmark.py  0006_auto_20160608_1506.py  0007_competition_overview.py  0008_auto_20160621_1929.py  0009_auto_20160622_1834.py  0010_auto_20160623_1407.py  0011_auto_20160623_1440.py  0012_auto_20160625_1849.py  0013_auto_20160626_2102.py  0014_auto_20160626_2212.py  0015_auto_20160626_2305.py  0016_auto_20160628_1635.py  0017_auto_20160628_1637.py  0018_auto_20160630_1009.py  0019_auto_20160701_1255.py  0020_track_percomp_uniqueid.py  0021_subtrack_pertrack_uniqueid.py  0022_auto_20160703_1237.py  0023_remove_benchmark_evaluator_function_argumentordinal.py  0024_auto_20160709_0024.py  (+20 more)
scriptnet/databases/: dummy_private_data_gqq3AmO.txt  dummy_public_data.txt
scriptnet/scriptnet/: settings.py  urls.py  wsgi.py
(+2839 files in other folders)
